@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.antenna.gr" version="1.2.1" name="ANT1 Player" provider-name="Twilight0">
+<addon id="plugin.video.antenna.gr" version="1.2.2" name="ANT1 Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="1.3.4" />
@@ -19,6 +19,12 @@
 		<website>http://www.antenna.gr/</website>
         <size>692701</size>
 		<news>
+[B]1.2.2[/B]
+- Strengthened live resolver with direct urls as fallback
+- Option available to utilize web page resolver for live stream
+- Clear function cache action
+- Various cosmetics
+
 [B]1.2.1[/B]
 - Minor correction in live resolver
 
